[package]
name = "c2pa-php"
version = "0.1.0"
authors = ["James Glasgow <james@jrglasgow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "*"
c2pa = { version = "^0.28.0", features = ["file_io", "add_thumbnails", "fetch_remote_manifests", "xmp_write", "serialize_thumbnails"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[profile.release]
strip = "debuginfo"
